crates/ktsense-mcp/tests/snapshots/stdio_session__symbol_lookup.snap
---
source: crates/ktsense-mcp/tests/stdio_session.rs
expression: report
---
tools/list: analyze_kotlin_dependencies, check_kotlin_syntax, explain_kotlin_symbol, find_kotlin_symbol, get_kotlin_outline, get_kotlin_repo_map, ktsense_status, trace_kotlin_symbol

=== find_kotlin_symbol ===
isError: false
structuredContent:
{
  "citations": [
    {
      "line": 9,
      "path": "db/src/main/kotlin/shop/db/JdbcOrderRepository.kt"
    },
    {
      "line": 4,
      "path": "core/src/main/kotlin/shop/order/OrderRepository.kt"
    }
  ],
  "citations_omitted": 0,
  "command": "symbols",
  "exit": 3,
  "files": [
    "db/src/main/kotlin/shop/db/JdbcOrderRepository.kt",
    "core/src/main/kotlin/shop/order/OrderRepository.kt"
  ],
  "requires": "kmp-lsp",
  "root": "<FIXTURE>",
  "tool": "find_kotlin_symbol",
  "warmth": "opened"
}
---
## Symbols: save

```text
shop.db.JdbcOrderRepository.save  fun  db/src/main/kotlin/shop/db/JdbcOrderRepository.kt:9  override fun save(order: Order): OrderId
shop.order.OrderRepository.save  fun  core/src/main/kotlin/shop/order/OrderRepository.kt:4  fun save(order: Order): OrderId
```

=== find_kotlin_symbol ===
isError: false
structuredContent:
{
  "citations": [
    {
      "line": 9,
      "path": "db/src/main/kotlin/shop/db/JdbcOrderRepository.kt"
    }
  ],
  "citations_omitted": 0,
  "command": "symbols",
  "exit": 3,
  "files": [
    "db/src/main/kotlin/shop/db/JdbcOrderRepository.kt"
  ],
  "requires": "kmp-lsp",
  "root": "<FIXTURE>",
  "tool": "find_kotlin_symbol",
  "warmth": "already_decided"
}
---
## Symbols: save

```text
shop.db.JdbcOrderRepository.save  fun  db/src/main/kotlin/shop/db/JdbcOrderRepository.kt:9  override fun save(order: Order): OrderId
```

... 1 more (use --limit)

=== find_kotlin_symbol ===
isError: false
structuredContent:
{
  "citations": [
    {
      "line": 9,
      "path": "db/src/main/kotlin/shop/db/JdbcOrderRepository.kt"
    }
  ],
  "citations_omitted": 0,
  "command": "symbols",
  "exit": 0,
  "files": [
    "db/src/main/kotlin/shop/db/JdbcOrderRepository.kt"
  ],
  "requires": "kmp-lsp",
  "root": "<FIXTURE>",
  "tool": "find_kotlin_symbol",
  "warmth": "already_decided"
}
---
## Symbols: save

```text
shop.db.JdbcOrderRepository.save  fun  db/src/main/kotlin/shop/db/JdbcOrderRepository.kt:9  override fun save(order: Order): OrderId
```

=== find_kotlin_symbol ===
isError: false
structuredContent:
{
  "citations": [
    {
      "line": 9,
      "path": "db/src/main/kotlin/shop/db/JdbcOrderRepository.kt"
    },
    {
      "line": 4,
      "path": "core/src/main/kotlin/shop/order/OrderRepository.kt"
    }
  ],
  "citations_omitted": 0,
  "command": "symbols",
  "exit": 3,
  "files": [
    "db/src/main/kotlin/shop/db/JdbcOrderRepository.kt",
    "core/src/main/kotlin/shop/order/OrderRepository.kt"
  ],
  "requires": "kmp-lsp",
  "root": "<FIXTURE>",
  "tool": "find_kotlin_symbol",
  "warmth": "already_decided"
}
---
## Symbols: ZzzNope

```text
shop.db.JdbcOrderRepository.save  fun  db/src/main/kotlin/shop/db/JdbcOrderRepository.kt:9  override fun save(order: Order): OrderId
shop.order.OrderRepository.save  fun  core/src/main/kotlin/shop/order/OrderRepository.kt:4  fun save(order: Order): OrderId
```

server exit: Some(0)
server stderr: empty
