crates/ktsense-mcp/tests/snapshots/stdio_session__syntax_check_clean.snap
---
source: crates/ktsense-mcp/tests/stdio_session.rs
expression: report
---
tools/list: analyze_kotlin_dependencies, check_kotlin_syntax, explain_kotlin_symbol, find_kotlin_symbol, get_kotlin_outline, get_kotlin_repo_map, ktsense_status, search_kotlin_text, trace_kotlin_symbol

=== check_kotlin_syntax ===
isError: false
structuredContent:
{
  "citations": [],
  "citations_omitted": 0,
  "command": "check",
  "exit": 0,
  "files": [],
  "findings": 0,
  "outcome": "clean",
  "requires": "kmp-lsp",
  "root": "<FIXTURE>",
  "tool": "check_kotlin_syntax"
}
---
## Syntax check

9 OK, 0 with errors.

server exit: Some(0)
server stderr: empty
