crates/ktsense-mcp/tests/snapshots/stdio_session__syntax_check_failure.snap
---
source: crates/ktsense-mcp/tests/stdio_session.rs
expression: report
---
tools/list: analyze_kotlin_dependencies, check_kotlin_syntax, explain_kotlin_symbol, find_kotlin_symbol, get_kotlin_outline, get_kotlin_repo_map, ktsense_status, search_kotlin_text, trace_kotlin_symbol

=== check_kotlin_syntax ===
isError: true
structuredContent:
{
  "citations": [],
  "citations_omitted": 0,
  "command": "check",
  "exit": 1,
  "files": [],
  "outcome": "execution_failure",
  "requires": "kmp-lsp",
  "root": "<FIXTURE>",
  "tool": "check_kotlin_syntax"
}
---
ktsense: could not parse engine `check` output: EOF while parsing a value at line 1 column 0; engine stderr: no stderr

server exit: Some(0)
server stderr: empty
